clang-ir/tests/snapshots/snapshot_fixtures__fixtures__ptr_len_slice.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/ptr_len_slice.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "4" }, CirInt { ty: Named("s32i"), value: "6" }, CirInt { ty: Named("s32i"), value: "8" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = ConstArray { ty: Array { element_type: Named("s8i"), size: 7 }, elts: Str("%d %d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn sum(%arg2: s32i*, %arg3: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg2: s32i*, %arg3: s32i):
        %41 = alloca s32i*, "items", align 8
        %42 = alloca s32i, "len", align 4
        %43 = alloca s32i, "__retval", align 4
        %44 = alloca s32i, "total", align 4
        store %arg2, %41
        store %arg3, %42
        %45 = const 0 : s32i
        store %45, %44, align 4
        scope {
                %48 = alloca s32i, "i", align 4
                %49 = const 0 : s32i
                store %49, %48, align 4
                for cond {
                        %59 = load %48 : s32i, align 4
                        %60 = load %42 : s32i, align 4
                        cmp
                        condition %61
                } step {
                        %50 = load %48 : s32i, align 4
                        inc
                        store %51, %48, align 4
                        yield
                } body {
                        scope {
                                %52 = load %48 : s32i, align 4
                                %53 = cast(integral) %52 : s64i
                                %54 = load %41 : s32i*, align 8
                                ptr_stride
                                %56 = load %55 : s32i, align 4
                                %57 = load %44 : s32i, align 4
                                %58 = add %57, %56 : s32i [nsw]
                                store %58, %44, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %46 = load %44 : s32i, align 4
        store %46, %43
        %47 = load %43 : s32i
        return %47
}
fn bump(%arg0: s32i*, %arg1: s32i) -> void [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i):
        %25 = alloca s32i*, "items", align 8
        %26 = alloca s32i, "len", align 4
        store %arg0, %25
        store %arg1, %26
        scope {
                %27 = alloca s32i, "i", align 4
                %28 = const 0 : s32i
                store %28, %27, align 4
                for cond {
                        %38 = load %27 : s32i, align 4
                        %39 = load %26 : s32i, align 4
                        cmp
                        condition %40
                } step {
                        %29 = load %27 : s32i, align 4
                        inc
                        store %30, %27, align 4
                        yield
                } body {
                        scope {
                                %31 = const 1 : s32i
                                %32 = load %27 : s32i, align 4
                                %33 = cast(integral) %32 : s64i
                                %34 = load %25 : s32i*, align 8
                                ptr_stride
                                %36 = load %35 : s32i, align 4
                                %37 = add %36, %31 : s32i [nsw]
                                store %37, %35, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        return
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[4], "values", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.values : s32i[4]*
        copy
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[4]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = cast(array_to_ptrdecay) %1 : s32i*
        %8 = const 4 : s32i
        %9 = call @sum(%7, %8) : s32i [all]
        %10 = call @printf(%6, %9) : s32i [all]
        %11 = cast(array_to_ptrdecay) %1 : s32i*
        %12 = const 4 : s32i
        call @bump(%11, %12) [all]
        %13 = get_global @printf : (s8i*, ...) -> s32i*
        %14 = get_global @.str.1 : s8i[7]*
        %15 = cast(array_to_ptrdecay) %14 : s8i*
        %16 = const 0 : s64i
        get_element
        %18 = load %17 : s32i, align 16
        %19 = const 3 : s64i
        get_element
        %21 = load %20 : s32i, align 4
        %22 = call @printf(%15, %18, %21) : s32i [all]
        %23 = const 0 : s32i
        store %23, %0
        %24 = load %0 : s32i
        return %24
}
