clang-ir/tests/snapshots/snapshot_fixtures__fixtures__ptr_len_slice_enumerate.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/ptr_len_slice_enumerate.c" (c, x86_64-unknown-linux-gnu)
global __const.main.values : s32i[4] = ConstArray { ty: Array { element_type: Named("s32i"), size: 4 }, elts: Array([CirInt { ty: Named("s32i"), value: "2" }, CirInt { ty: Named("s32i"), value: "4" }, CirInt { ty: Named("s32i"), value: "6" }, CirInt { ty: Named("s32i"), value: "8" }]), trailing_zeros_num: 0 } [cir_private, default, dso_local, constant]
global .str : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("%d\n"), trailing_zeros_num: 1 } [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn weighted_sum(%arg0: s32i*, %arg1: s32i) -> s32i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i*, %arg1: s32i):
        %13 = alloca s32i*, "items", align 8
        %14 = alloca s32i, "len", align 4
        %15 = alloca s32i, "__retval", align 4
        %16 = alloca s32i, "total", align 4
        store %arg0, %13
        store %arg1, %14
        %17 = const 0 : s32i
        store %17, %16, align 4
        scope {
                %20 = alloca s32i, "i", align 4
                %21 = const 0 : s32i
                store %21, %20, align 4
                for cond {
                        %35 = load %20 : s32i, align 4
                        %36 = load %14 : s32i, align 4
                        cmp
                        condition %37
                } step {
                        %22 = load %20 : s32i, align 4
                        inc
                        store %23, %20, align 4
                        yield
                } body {
                        scope {
                                %24 = alloca s32i, "item", align 4
                                %25 = load %20 : s32i, align 4
                                %26 = cast(integral) %25 : s64i
                                %27 = load %13 : s32i*, align 8
                                ptr_stride
                                %29 = load %28 : s32i, align 4
                                store %29, %24, align 4
                                %30 = load %24 : s32i, align 4
                                %31 = load %20 : s32i, align 4
                                mul
                                %33 = load %16 : s32i, align 4
                                %34 = add %33, %32 : s32i [nsw]
                                store %34, %16, align 4
                                yield
                        }
                        yield
                }
                yield
        }
        %18 = load %16 : s32i, align 4
        store %18, %15
        %19 = load %15 : s32i
        return %19
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[4], "values", align 16
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.values : s32i[4]*
        copy
        %4 = get_global @printf : (s8i*, ...) -> s32i*
        %5 = get_global @.str : s8i[4]*
        %6 = cast(array_to_ptrdecay) %5 : s8i*
        %7 = cast(array_to_ptrdecay) %1 : s32i*
        %8 = const 4 : s32i
        %9 = call @weighted_sum(%7, %8) : s32i [all]
        %10 = call @printf(%6, %9) : s32i [all]
        %11 = const 0 : s32i
        store %11, %0
        %12 = load %0 : s32i
        return %12
}
